# buildbook

./: .gitignore  CHANGELOG.md  README.md  cspell.json  pyproject.toml
.github/workflows/: ci.yml
buildbook/: __init__.py  builder.py  cli.py  manifest.py  mermaid.py  scanner.py
content/: 001-introduction.md  002-chapter-one.md  003-chapter-two.md  book.yaml
tests/: conftest.py  test_builder.py  test_cli.py  test_manifest.py  test_mermaid.py  test_scanner.py
